@@ -61,12 +61,8 @@ source_skeleton = ['#include \"ISpy/Analyzers/interface/ISpyExample.h\"',
                    '     std::string error = \"### Error: Examples \"',
                    '                          + edm::TypeID (typeid (ExampleCollection)).friendlyClassName() + \":\"', 
                    '                          + inputTag_.label() + \":\"',
-                   '                          + inputTag_.instance() + \":\"', 
-                   '                          + inputTag_.process() + \" are not found.\";\n',
-                   '      IgCollection& collection = storage->getCollection(\"Errors_V1\");',
-                   '      IgProperty ERROR_MSG = collection.addProperty(\"Error\", std::string());',
-                   '      IgCollectionItem item = collection.create();',
-                   '      item[ERROR_MSG] = error;',
+                   '                          + inputTag_.instance() + \" are not found\";', 
+                   '      config->error(error);',
                    '  }',
                    '#endif\n',
                    '}\n',
