@@ -1,3 +1,8 @@
+2010-01-07 Tom McCauley <thomas.mccauley@cern.ch>
+
+	* ISpyCSCSegment.cc: constrain segment to chamber
+	* MakeISpyAnalyzer.py: update to use config for error
+
 2009-12-22  Ianna Osborne  <ianna.osborne@cern.ch>
 
 	* ISpyMET.cc: Migtrated to a new MET data format.
